# hypersnatch

./: .gitignore  .npmrc  ACCEPTANCE_CRITERIA.md  AGENT_INTELLIGENCE.md  ARCHITECTURE_LOCK_STATE.md  AUDIT.md  BUILD_REPRODUCIBILITY.md  BUSINESS_PLAN.md  CHANGELOG_V15.md  CHATGPT_HANDOVER_FORENSICS.md  CODE_SCAN_REPORT.md  CONTRIBUTING.md  Dockerfile.repro  EXECUTIVE_SUMMARY.md  FINAL_SECURITY_VALIDATION_REPORT.md  GOVERNANCE.md  HyperSnatch_Architecture_Documentation.txt  HyperSnatch_Final_Fused.html  HyperSnatch_Key_Management_Playbook.txt  HyperSnatch_Next30Steps_Execution_Log.txt  HyperSnatch_Next30Steps_Execution_Log_2.txt  HyperSnatch_Next30Steps_Execution_Log_3.txt  HyperSnatch_Next30Steps_Execution_Log_4.txt  HyperSnatch_Next30Steps_Execution_Log_5.txt  HyperSnatch_Next30Steps_Execution_Log_6.txt  HyperSnatch_Next30Steps_Execution_Log_7.txt  HyperSnatch_Next30Steps_Execution_Log_8.txt  HyperSnatch_Next30Steps_Execution_Log_9.txt  HyperSnatch_NextBuild_Integrity_Upgrades.txt  HyperSnatch_PHASE_69_Final.html  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUARDRAILS.md  IMPLEMENTATION_MAP.md  IV_SECURITY_AUDIT.md  LAUNCHER_AUDIT.md  LICENSE  MASTER_PROOF_v1.2.1.md  MISSION.md  MISSION_COMPLETE.md  MODULE_CONTRACTS.md  (+57 more)
CASE-LAB-FREEZE-2026-03-01T09-31-46-150Z/: SOVEREIGN_AUDIT_CHAIN.tear.json  findings.json  original_artifact.html
FORENSIC_EXPORT_ELITE/: MANIFEST.tear.json  evidence_log.json
HYPERSNATCH_SOVEREIGN_BUNDLE/: CLIENT_REPORT_VIEWER.html  MOBILE_RECEIVER.html  license.json
rust/hs-core/: Cargo.toml  rust-toolchain.toml
rust/hs-core/src/: main.rs
(+1060 files in other folders)
